--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/thamizha/ekalappai/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
-          <a href="https://github.com/thamizha/ekalappai/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
-          <a href="https://github.com/thamizha/ekalappai" id="view-on-github" class="button"><span>View on GitHub</span></a>
+          <!--a href="https://github.com/thamizha/ekalappai/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a-->
+          <a href="https://drive.google.com/uc?id=0Bw25oWQKNnRyNlJQTjFfV2k4VVU&export=download" id="download-tar-gz" class="button"><span>Download Executable</span></a>
+          <a href="https://github.com/thamizha/ekalappai" id="view-on-github" class="button"><span>View source on GitHub</span></a>
         </section>
 
         <hr>
