--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
         <section id="downloads" class="clearfix">
           <!--a href="https://github.com/thamizha/ekalappai/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a-->
-          <a href="https://drive.google.com/uc?id=0Bw25oWQKNnRyNlJQTjFfV2k4VVU&export=download" id="download-tar-gz" class="button"><span>Download Executable</span></a>
-          <a href="https://github.com/thamizha/ekalappai" id="view-on-github" class="button"><span>View source on GitHub</span></a>
+          <a href="https://drive.google.com/uc?id=0Bw25oWQKNnRyNlJQTjFfV2k4VVU&export=download" id="download-tar-gz" class="button"><span>Download Exe</span></a>
+          <a href="https://github.com/thamizha/ekalappai" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
         <hr>
